--- a/RES_SHES_PR-22-27-2015/SHES_Graphics/MainWindow.xaml
+++ b/RES_SHES_PR-22-27-2015/SHES_Graphics/MainWindow.xaml
@@ -35,10 +35,13 @@
             </charting:Chart.Series>
         </charting:Chart>
         <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" FontFamily="Segoe UI Black" FontSize="90">System analitics</TextBlock>
-        <StackPanel Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Background="Transparent" HorizontalAlignment="Left" Margin="100,0,0,0">
-            <TextBlock Name="CurrentTime" Width="700" Height="100" Margin="0,0,0,0" TextAlignment="Right" Text="" FontFamily="Segoe UI Black" FontSize="70" HorizontalAlignment="Right"/>
-            <TextBlock Name="CurrentPrice" Width="700" Height="100" Margin="0,0,0,0" TextAlignment="Left" Text="" FontFamily="Segoe UI Black" FontSize="50"/>
+        <StackPanel Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Background="Transparent" HorizontalAlignment="Right" Margin="70,0,0,0">
+            <TextBlock Name="CurrentTime" Width="800" Height="100" Margin="0,0,0,0" TextAlignment="Right" FontFamily="Segoe UI Black" FontSize="70" HorizontalAlignment="Right"/>
+            <TextBlock Name="CurrentPrice" Width="800" Height="100" Margin="0,0,0,0" TextAlignment="Right" FontFamily="Segoe UI Black" FontSize="45" HorizontalAlignment="Right"/>
         </StackPanel>
         <ComboBox Name="GraphDate" ItemsSource="{Binding ListOfDays, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ComboBox_SelectionChanged" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Width="500" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="11,0,0,0"/>
     </Grid>
 </Window>
+
+
+
