--- a/RES_SHES_PR-22-27-2015/SHES_Graphics/MainWindow.xaml
+++ b/RES_SHES_PR-22-27-2015/SHES_Graphics/MainWindow.xaml
@@ -28,13 +28,15 @@
         <charting:Chart Grid.Column="1" Grid.Row="2" Grid.RowSpan="4" Grid.ColumnSpan="4" Name="chart" Margin="0,0,40,50" BorderBrush="Transparent">
             <charting:Chart.Series>
                 <charting:LineSeries Title="Solar panel Production" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
-                <charting:LineSeries Title="Battery Consumption/Production" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
+                <charting:LineSeries Title="Battery Production/Consumption" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
                 <charting:LineSeries Title="Power from Utility" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
+                <charting:LineSeries Title="Power to Utility" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
                 <charting:LineSeries Title="Total Consumption" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
                 <charting:LineSeries Title="Power Price" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
+                <charting:LineSeries Title="Earned/Spent" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}"/>
             </charting:Chart.Series>
         </charting:Chart>
-        <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" FontFamily="Segoe UI Black" FontSize="90">System analytics</TextBlock>
+        <TextBlock Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" FontFamily="Segoe UI Black" FontSize="85">System analytics</TextBlock>
         <StackPanel Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Background="Transparent" HorizontalAlignment="Right" Margin="70,0,0,0">
             <TextBlock Name="CurrentTime" Width="800" Height="100" Margin="0,0,0,0" TextAlignment="Right" FontFamily="Segoe UI Black" FontSize="70" HorizontalAlignment="Right"/>
             <TextBlock Name="CurrentPrice" Width="800" Height="100" Margin="0,0,0,0" TextAlignment="Right" FontFamily="Segoe UI Black" FontSize="45" HorizontalAlignment="Right"/>
